<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/surfaceViewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/faceLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.example.facemaker.Face
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/buttonsVert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/colorSeekbarsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/textLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="5dp">

                    <TextView
                        android:id="@+id/redText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="4dp"
                        android:text="@string/red" />

                    <TextView
                        android:id="@+id/greenText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="4dp"
                        android:text="@string/green" />

                    <TextView
                        android:id="@+id/blueText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="4dp"
                        android:text="@string/blue" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seekBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <SeekBar
                        android:id="@+id/RedSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="255"
                        android:paddingVertical="5dp" />

                    <SeekBar
                        android:id="@+id/GreenSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="255"
                        android:paddingVertical="5dp" />

                    <SeekBar
                        android:id="@+id/blueSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonAndRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_face"
                    android:textSize="12sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="5dp">

                    <RadioButton
                        android:id="@+id/HairRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:text="@string/hair" />

                    <RadioButton
                        android:id="@+id/EyesRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:text="@string/eyes" />

                    <RadioButton
                        android:id="@+id/SkinRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/skin" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>